# blind

./: .gitignore  README.md  TODO.md  blind.py  blind_facial.py  block_blind.py  easy_ocr.py  main.py  ocr_blind.py  ocr_blind_vid.py  pyproject.toml  temp_vid_name.avi
old_code/: cli_blind.py  extract_frames_ai_ocr.py  readme.md
tests/__init__.py/: test_mps.py
util/: play_vid.py  rnd_word.txt  rnd_wrd_vid.py
